# monodepth-cpp

./: CMakeLists.txt  LICENSE  README.md  run_tf_docker.sh  tf.Dockerfile
CMakeModules/: FindEigen3.cmake  FindProtobuf.cmake  FindTensorFlow.cmake
Tensorflow_build_instructions/: README.md
freeze_graph/: README.md  freeze_graph.py  monodepth.py
include/monodepth/: monodepth.h  my_utils.h
model/: README.md
src/: inference_monodepth.cpp  monodepth.cpp
